--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server= localhost\\SQLEXPRESS; Database=Rpg;Trusted_Connection=true;"
   },
+  "AppSettings":{
+    "Token" : "Excellent Security"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
